# mmblink

./: pyproject.toml
mmblink/: __init__.py  cutterlib.py
mmblink/cli/: detect.py  g3_to_fits.py  pipeline.py  plot_stamp_lc.py  plot_stamp_lc_all.py
mmblink/io/: __init__.py  map.py
mmblink/legacy/: cutterlib.py  dtools.py  ftools.py
mmblink/manage/: __init__.py  run.py
mmblink/pipeline/: __init__.py  detect.py
python/mmblink/: astrometry.py  cutterlib.py  dtools.py  ftools.py
